# t21

./: README.md  pyproject.toml
src/ocean_sentinel/: __init__.py  audit.py  cli.py  config.py  coverage.py  database.py  export.py  ingest.py  recommend.py  sample_data.py  simulate.py  utils.py
src/ocean_sentinel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_audit.py  test_cli.py  test_config.py  test_coverage.py  test_database.py  test_export.py  test_ingest.py  test_recommend.py  test_sample_data.py  test_simulate.py  test_utils.py
